# Azure-Wallet

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  compose.yml
migrations/: 20260719170000_refactor_auth_and_assets.down.sql  20260719170000_refactor_auth_and_assets.up.sql  20260719183000_create_asset_movements.down.sql  20260719183000_create_asset_movements.up.sql
src/: app.rs  error.rs  main.rs  models.rs  repository.rs
src/assets/favicons/: site.webmanifest
src/auth/: user.rs
src/routes/: api.rs  frontend.rs
src/routes/fixtures/: bitcoin_asset.sql
src/routes/snapshots/: wallet_live__routes__api__tests__create_asset.snap  wallet_live__routes__api__tests__list_assets.snap  wallet_live__routes__api__tests__update_asset.snap
src/services/: auth.rs  mod.rs  portfolio.rs
templates/: asset_form.html  auth.html  base.html  dashboard.html
