[package]
name = "wallet-live"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.15.6", features = ["derive"] }
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie-private"] }
bcrypt = "0.19.2"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
jwt-simple = { version = "0.12.14", default-features = false, features = ["pure-rust"] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio", "rust_decimal"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
insta = { version = "1.47.0", features = ["json"] }
